--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.8.0/antd.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link href='https://fonts.googleapis.com/css?family=Bellota' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Inria Sans' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Bellota" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inria Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
